--- a/po/wesnoth/sk.po
+++ b/po/wesnoth/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-02 12:40+0200\n"
-"PO-Revision-Date: 2010-03-27 23:51+0100\n"
+"PO-Revision-Date: 2010-04-09 22:18+0100\n"
 "Last-Translator: aceman <acelists@atlas.sk>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -8578,14 +8578,12 @@ msgid "aliases:"
 msgstr "aliasy:"
 
 #: src/menu_events.cpp:2200
-#, fuzzy
 msgid "(A) - admin command"
-msgstr "(A) - autentifikačný príkaz"
+msgstr "(A) - administračný príkaz"
 
 #: src/menu_events.cpp:2207 src/menu_events.cpp:2405
-#, fuzzy
 msgid "(admin only)"
-msgstr "(len pri autentifikácii)"
+msgstr "(len pre administrátora)"
 
 #: src/menu_events.cpp:2227
 msgid ""
@@ -8749,19 +8747,17 @@ msgid "Room query."
 msgstr "Dotaz v miestnosti."
 
 #: src/menu_events.cpp:2397
-#, fuzzy
 msgid "(D) - debug only, (N) - network only, (A) - admin only"
 msgstr ""
-"(D) - len pre ladenie, (N) - len na sieti, (A) - len pri autentifikácii"
+"(D) - len pre ladenie, (N) - len na sieti, (A) - len pre administrátora"
 
 #: src/menu_events.cpp:2403
 msgid "(debug command)"
 msgstr "(príkaz ladenia)"
 
 #: src/menu_events.cpp:2404
-#, fuzzy
 msgid "(network only)"
-msgstr " (len na sieti)"
+msgstr "(len na sieti)"
 
 #: src/menu_events.cpp:2429
 msgid "Refresh gui."
@@ -9682,20 +9678,13 @@ msgstr[2] ""
 "zlatu."
 
 #: src/playsingle_controller.cpp:255
-#, fuzzy
 msgid ""
 "You will start the next scenario with the defined minimum starting gold."
 msgid_plural ""
 "You will start the next scenario with the defined minimum starting gold."
-msgstr[0] ""
-"Ďalšiu scénu začneš s $gold zlatkami navyše oproti minimálnemu počiatočnému "
-"zlatu."
-msgstr[1] ""
-"Ďalšiu scénu začneš s $gold zlatkou navyše oproti minimálnemu počiatočnému "
-"zlatu."
-msgstr[2] ""
-"Ďalšiu scénu začneš s $gold zlatkami navyše oproti minimálnemu počiatočnému "
-"zlatu."
+msgstr[0] "Ďalšiu scénu začneš s určeným minimálnym počiatočným zlatom."
+msgstr[1] "Ďalšiu scénu začneš s určeným minimálnym počiatočným zlatom."
+msgstr[2] "Ďalšiu scénu začneš s určeným minimálnym počiatočným zlatom."
 
 #: src/playsingle_controller.cpp:263
 msgid ""
