--- a/po/wesnoth-low/fr.po
+++ b/po/wesnoth-low/fr.po
@@ -1088,8 +1088,8 @@ msgid ""
 "little playhouse, and we <i>might</i> spare you. Or, at the very least, we "
 "promise you a quick and painless death."
 msgstr ""
-"Hé, vous les elfes ! Donner la pierre et nous <i>pourrions<i> ne pas "
-"détruire votre joli petit théâtre, et nous <i>pourrions<i> vous épargner. "
+"Hé, vous les elfes ! Donner la pierre et nous <i>pourrions</i> ne pas "
+"détruire votre joli petit théâtre, et nous <i>pourrions</i> vous épargner. "
 "Ou, comme dernière option, nous vous promettons une mort rapide et indolore."
 
 #. [message]: id=Galtrid
