--- a/po/wesnoth-aoi/gl.po
+++ b/po/wesnoth-aoi/gl.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2009-09-16 21:47+0200\n"
-"PO-Revision-Date: 2008-12-08 15:56+0100\n"
-"Last-Translator: Leandro Regueiro <leandro DOT regueiro AT gmail DOT com>\n"
+"POT-Creation-Date: 2010-04-10 12:33+0200\n"
+"PO-Revision-Date: 2009-07-13 16:17+0100\n"
+"Last-Translator: Leandro Regueiro <leandro.regueiro@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -97,7 +97,7 @@ msgstr "Melloras na historias posterior a 1.4 e na forma de xogo"
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:53
 msgid "Editing, proofreading and gameplay testing"
-msgstr "Edición, busca de erros e proba de xogo"
+msgstr "Modificacións, busca de erros e probas de xogo"
 
 #. [scenario]: id=1_Defend_the_Forest
 #: data/campaigns/An_Orcish_Incursion/scenarios/1_Defend_the_Forest.cfg:9
@@ -998,7 +998,6 @@ msgstr "Magos"
 
 #. [objectives]
 #: data/campaigns/An_Orcish_Incursion/scenarios/5_Linaera_the_Quick.cfg:106
-#, fuzzy
 msgid ""
 "Hint:\n"
 "Use Elven Scouts and Linaera's power of teleportation to mount hit-and-run "
@@ -1253,7 +1252,6 @@ msgstr "Rualsha-Tan"
 
 #. [objectives]
 #: data/campaigns/An_Orcish_Incursion/scenarios/7_Showdown.cfg:111
-#, fuzzy
 msgid ""
 "Hint:\n"
 "Your enemy is well-defended against attacks from the south. Use rangers to "
