--- a/po/wesnoth/de.po
+++ b/po/wesnoth/de.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.8\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-23 23:46+0200\n"
-"PO-Revision-Date: 2010-04-02 16:26+0100\n"
-"Last-Translator: Christoph Berg <Christoph.Berg@kpm-sport.de>\n"
+"PO-Revision-Date: 2010-04-23 23:59+0100\n"
+"Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -9794,66 +9794,56 @@ msgid "--no games open--"
 msgstr ""
 
 #: src/multiplayer_lobby.cpp:153
-#, fuzzy
 msgid " (Unknown Era)"
-msgstr "Unbekannte Ära"
+msgstr " (Unbekannte Ära)"
 
 #: src/multiplayer_lobby.cpp:536 src/multiplayer_lobby.cpp:899
-#, fuzzy
 msgid "Password Required"
-msgstr "Passwort: "
+msgstr "Passwort benötigt"
 
 #: src/multiplayer_lobby.cpp:720 src/multiplayer_wait.cpp:174
 msgid "Game Lobby"
 msgstr "Mehrspielerbereich"
 
 #: src/multiplayer_lobby.cpp:725
-#, fuzzy
 msgid "Observe Game"
-msgstr "Beobachter"
+msgstr "Spiel beobachten"
 
 #: src/multiplayer_lobby.cpp:726
-#, fuzzy
 msgid "Join Game"
-msgstr "Spielstand laden"
+msgstr "Spiel beitreten"
 
 #: src/multiplayer_lobby.cpp:728
-#, fuzzy
 msgid "Quick Replays"
-msgstr "Wiederholung anzeigen"
+msgstr "Schneller Verlauf"
 
 #: src/multiplayer_lobby.cpp:730
-#, fuzzy
 msgid "Preferences"
-msgstr "Abhängigkeiten"
+msgstr "Einstellungen"
 
 #: src/multiplayer_lobby.cpp:732
-#, fuzzy
 msgid "Quit"
-msgstr "Schnell"
+msgstr "Beenden"
 
 #: src/multiplayer_lobby.cpp:734
-#, fuzzy
 msgid "Apply Filter"
-msgstr "Filter: "
+msgstr "Filter anwenden"
 
 #: src/multiplayer_lobby.cpp:735
 msgid "Invert"
-msgstr ""
+msgstr "Invertieren"
 
 #: src/multiplayer_lobby.cpp:736
-#, fuzzy
 msgid "Vacant Slots"
-msgstr "Verfügbarer Platz:"
+msgstr "Freie Plätze"
 
 #: src/multiplayer_lobby.cpp:737
 msgid "Friends in Game"
 msgstr ""
 
 #: src/multiplayer_lobby.cpp:738
-#, fuzzy
 msgid "Filter:"
-msgstr "Filter: "
+msgstr "Filter:"
 
 #: src/multiplayer_lobby.cpp:747
 msgid "Skip quickly to the active turn when observing"
@@ -9886,7 +9876,7 @@ msgstr ""
 
 #: src/multiplayer_lobby.cpp:900
 msgid "Joining this game requires a password."
-msgstr ""
+msgstr "Um diesem Spiel beizutreten, wird ein Passwort benötigt."
 
 #: src/multiplayer_ui.cpp:195
 msgid "Invalid Color"
