--- a/po/wesnoth-lib/ja.po
+++ b/po/wesnoth-lib/ja.po
@@ -5,14 +5,15 @@
 # Nobuhito Okada <okyada@gmail.com>, 2005-2006.
 # MATSUMOTO Yuji <matumoto@marron.cias.osakafu-u.ac.jp>, 2005.
 # naoki iimura <amatubu@mac.com>, 2007-2008.
+# IWAI, Masaharu <iwaim.sub@gmail.com>, 2010.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.7.x-SVN\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:49+0200\n"
-"PO-Revision-Date: 2010-03-29 23:58+0900\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2010-04-29 09:23+0900\n"
+"Last-Translator: IWAI, Masaharu <iwaim.sub@gmail.com>\n"
 "Language-Team: Japanese Translation Team\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1643,7 +1644,7 @@ msgstr "ロビーへの参加をすべて表示"
 
 #: src/game_preferences_display.cpp:169
 msgid "Use new lobby interface"
-msgstr ""
+msgstr "ロビーの新しいインタフェースを使う"
 
 #: src/game_preferences_display.cpp:170
 msgid "Sort Lobby List"
@@ -1858,7 +1859,7 @@ msgstr "AI ユニットの移動時にアニメーションを行わないよう
 
 #: src/game_preferences_display.cpp:343
 msgid "Sighting an allied unit interrupts your unit's movement"
-msgstr ""
+msgstr "同盟軍ユニットを見つけたときにユニットの移動を中断する"
 
 #: src/game_preferences_display.cpp:351
 msgid "Overlay a grid onto the map"
@@ -1896,6 +1897,8 @@ msgid ""
 "mouseover^Use new lobby interface (only works after a manual reconnect to "
 "the server)"
 msgstr ""
+"ロビーの新しいインタフェースを使う（手動でサーバーに再接続した後に有効化され"
+"ます）"
 
 #: src/game_preferences_display.cpp:373
 msgid "Find and set path to MP server to host LAN games."
