--- a/po/wesnoth/ja.po
+++ b/po/wesnoth/ja.po
@@ -6,14 +6,15 @@
 # Nobuhito Okada <okyada@gmail.com>, 2005-2006.
 # MATSUMOTO Yuji <matumoto@marron.cias.osakafu-u.ac.jp>, 2005.
 # naoki iimura <amatubu@gmail.com>, 2005-2008.
+# IWAI, Masaharu <iwaim.sub@gmail.com>, 2010.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.8-CVS\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-23 23:46+0200\n"
-"PO-Revision-Date: 2010-04-20 06:33+0900\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2010-04-29 09:37+0900\n"
+"Last-Translator: IWAI, Masaharu <iwaim.sub@gmail.com>\n"
 "Language-Team: Japanese Translation Team\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -100,15 +101,13 @@ msgstr "ロビーの効果音"
 
 #. [ai]: id=default # id is needed uniquely identify a MP AI, it is not needed in the scenario AI
 #: data/ai/ais/default_ai.cfg:4
-#, fuzzy
 msgid "Multiplayer_AI^Default AI"
-msgstr "マルチプレイヤー"
+msgstr "デフォルト AI"
 
 #. [ai]: id=testing_ai_default
 #: data/ai/ais/testing_ai_default.cfg:5
-#, fuzzy
 msgid "Multiplayer_AI^RCA AI"
-msgstr "マルチプレイヤー"
+msgstr "RCA AI"
 
 #. [time]: id=underground
 #. [illuminated_time]: id=underground_illum
@@ -8459,6 +8458,8 @@ msgid ""
 "Unknown command '$command', try $help_command for a list of available "
 "commands."
 msgstr ""
+"未知のコマンド '$command' です。 利用可能なコマンドの一覧を調べるには "
+"$help_command を実行してください。"
 
 #: src/menu_events.cpp:1952
 msgid ""
@@ -8478,13 +8479,15 @@ msgstr "エラー:"
 
 #: src/menu_events.cpp:2004
 msgid "Missing argument $arg_id"
-msgstr ""
+msgstr "存在しない引数 $arg_id"
 
 #: src/menu_events.cpp:2052
 msgid ""
 "Available commands $flags_description:\n"
 "$list_of_commands"
 msgstr ""
+"利用可能なコマンド $flags_description:\n"
+"$list_of_commands"
 
 #: src/menu_events.cpp:2052 src/menu_events.cpp:2053 src/menu_events.cpp:2076
 msgid "help"
@@ -8492,29 +8495,27 @@ msgstr "ヘルプ"
 
 #: src/menu_events.cpp:2053
 msgid "Type $help_command <command> for more info."
-msgstr ""
+msgstr "更なる情報のために $help_command <コマンド> を入力してください。"
 
 #: src/menu_events.cpp:2064
 msgid " No help available."
 msgstr " ヘルプは利用できません。"
 
 #: src/menu_events.cpp:2069
-#, fuzzy
 msgid "Usage:"
-msgstr "メッセージ:"
+msgstr ""
 
 #: src/menu_events.cpp:2074
 msgid "aliases:"
-msgstr ""
+msgstr "エイリアス:"
 
 #: src/menu_events.cpp:2200
 msgid "(A) - admin command"
-msgstr ""
+msgstr "(A) - 管理者コマンド"
 
 #: src/menu_events.cpp:2207 src/menu_events.cpp:2405
-#, fuzzy
 msgid "(admin only)"
-msgstr "チームのみ"
+msgstr "（管理者のみ）"
 
 #: src/menu_events.cpp:2227
 msgid ""
@@ -8645,7 +8646,7 @@ msgstr "あなたの登録したニックネームを設定できる詳細の一
 
 #: src/menu_events.cpp:2288 src/menu_events.cpp:2291 src/menu_events.cpp:2293
 msgid "<room>"
-msgstr ""
+msgstr "<部屋>"
 
 #: src/menu_events.cpp:2288
 msgid "Join a room."
@@ -8665,7 +8666,7 @@ msgstr "利用可能な部屋の一覧。"
 
 #: src/menu_events.cpp:2297
 msgid "<room> <msg>"
-msgstr ""
+msgstr "<部屋> <メッセージ>"
 
 #: src/menu_events.cpp:2297
 msgid "Room message."
@@ -8681,14 +8682,13 @@ msgstr "部屋の問い合わせ。"
 
 #: src/menu_events.cpp:2397
 msgid "(D) - debug only, (N) - network only, (A) - admin only"
-msgstr ""
+msgstr "(D) - デバッグのみ, (N) - ネットワークのみ, (A) - 管理者のみ"
 
 #: src/menu_events.cpp:2403
 msgid "(debug command)"
 msgstr "（デバッグコマンド）"
 
 #: src/menu_events.cpp:2404
-#, fuzzy
 msgid "(network only)"
 msgstr "（ネットワークのみ）"
 
@@ -8721,9 +8721,8 @@ msgid "Visualize the screen refresh procedure."
 msgstr "画面更新手続きを可視化します。"
 
 #: src/menu_events.cpp:2439
-#, fuzzy
 msgid "Show fps."
-msgstr "リプレイを見る"
+msgstr ""
 
 #: src/menu_events.cpp:2441
 msgid "Save game."
@@ -8771,7 +8770,7 @@ msgstr "Lua の命令文を実行"
 
 #: src/menu_events.cpp:2466
 msgid "<command>[;<command>...]"
-msgstr ""
+msgstr "<コマンド>[;<コマンド>...]"
 
 #: src/menu_events.cpp:2466
 msgid "Set the command used by the custom command hotkey"
@@ -9430,9 +9429,8 @@ msgid "Quit"
 msgstr "終了"
 
 #: src/multiplayer_lobby.cpp:734
-#, fuzzy
 msgid "Apply Filter"
-msgstr "フィルター: "
+msgstr "フィルター適用"
 
 #: src/multiplayer_lobby.cpp:735
 msgid "Invert"
@@ -9447,9 +9445,8 @@ msgid "Friends in Game"
 msgstr ""
 
 #: src/multiplayer_lobby.cpp:738
-#, fuzzy
 msgid "Filter:"
-msgstr "フィルター: "
+msgstr "フィルター:"
 
 #: src/multiplayer_lobby.cpp:747
 msgid "Skip quickly to the active turn when observing"
@@ -9695,14 +9692,13 @@ msgstr[0] ""
 "を加えたものになります。"
 
 #: src/playsingle_controller.cpp:255
-#, fuzzy
 msgid ""
 "You will start the next scenario with the defined minimum starting gold."
 msgid_plural ""
 "You will start the next scenario with the defined minimum starting gold."
 msgstr[0] ""
-"次のシナリオの開始ゴールドは次のシナリオに設定されている最小ゴールドに $gold "
-"を加えたものになります。"
+"次のシナリオの開始ゴールドは次のシナリオに設定されている最小ゴールドになりま"
+"す。"
 
 #: src/playsingle_controller.cpp:263
 msgid ""
